<resources>
    <string name="app_name">Stensai Apps</string>
    <string name="titleAppBar">%1$s, %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="uploadedBy">Di-upload oleh %s</string>
    <string name="proses">Proses</string>
    <string name="selesai">Selesai</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="titleDeadlineTask">Tugas kamu akan berahir 1 jam lagi</string>
    <string name="tugas">Tugas</string>
    <string name="mading">Miraima</string>
    <string name="peran">Peran</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="saran">Saran</string>
    <string name="authorBy">Karya dari %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="allMagazineName">Semua</string>
    <string name="karyaMagazineName">Karya</string>
    <string name="ekskulMagazineName">Ekskul</string>
    <string name="jadwal">Jadwal</string>
    <string name="ransel">Ransel</string>
    <string name="titleSchedule">Waktunya %s dari jadwal anda!</string>
    <string name="jadwal_hari_s">Jadwal Hari %s</string>
    <string name="ketik_sesuatu">Ketik Sesuatu…</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="visit_our_website">VISIT OUR WEBSITE</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_bug">Apakah kamu menemukan bug didalam Aplikasi ini? Klik disini</string>
    <string name="copyright">Copyright © Stensai-Apps teams. All rights reserved.</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="i">i</string>
    <string name="pengajuan_information">Halaman Pengajuan berfungsi untuk menyampaikan Ajuan-Ajuan dari Siswa maupun Warga Sekolah mengenai Fasilitas Perpustakaan, Fasilitas Jurusan, maupun Fasilitas Umum, dengan adanya fitur ini, memudahkan warga Sekolah untuk menyampaikan aspirasi / ajuan dengan mudah.</string>
    <string name="saran_information">Halaman Saran berfungsi untuk menyampaikan Saran-saran dari Event dalam Sekolah, dengan adanya fitur ini, memudahkan warga Sekolah untuk menyampaikan aspirasi / ajuan dengan mudah sebagai bahan evaluasi untuk kedepannya.</string>
    <string name="judul_tugas">Judul Tugas</string>
    <string name="deskripsi_tugas">Deskripsi Tugas</string>
    <string name="waktu_tenggat">Waktu Tenggat</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="simpan">Simpan</string>
    <string name="jenis_pengajuan">Jenis Pengajuan</string>
    <string name="deskripsi_pengajuan">Deskripsi Pengajuan</string>
    <string name="nama_event">Nama Event</string>
    <string name="deskripsi_saran">Deskripsi Saran</string>
    <string name="saya_adalah">Saya Adalah…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="_0">0</string>
    <string name="tugas_selesai">Tugas selesai</string>
    <string name="kegiatan_amp_informasi"><![CDATA[Kegiatan & Informasi]]></string>
    <string name="chat">CHAT</string>
    <string name="kirim">KIRIM</string>
    <string name="catatan">Catatan</string>
    <string name="setting">SETTING</string>
    <string name="stensai">Stensai</string>
    <string name="school_app">School App</string>
    <string name="john_doe">John Doe</string>
    <string name="loremIpsum">Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet Lorem Ipsum Dolor Sit Amet </string>
    <string name="judul_jadwal">Judul Jadwal</string>
    <string name="deskripsi_jadwal">Deskripsi Jadwal</string>
    <string name="jumat">Jumat</string>
    <string name="senin">Senin</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="kamis">Kamis</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="_17_04_2020">17/04/2020</string>
    <string name="_13_06">13:06</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="tambah_jadwal">TAMBAH JADWAL</string>
    <string name="tambah_tugas">TAMBAH TUGAS</string>
    <string name="prioritas">Prioritas</string>
</resources>