<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/priorityLevel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/fragmentTitleTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/loremIpsum"
            android:textColor="@color/blueDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintEnd_toStartOf="@+id/dlDateTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dlDateTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17_04_2020"
            android:textColor="@color/blueDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dlTimeTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13_06"
            android:textColor="@color/blueDark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dlDateTask"
            app:layout_constraintTop_toBottomOf="@+id/dlDateTask" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/line"
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@color/blueDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentTitleTask"
            app:riv_corner_radius="4dp" />

        <TextView
            android:id="@+id/fragmentDescriptionTask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:gravity="center"
            android:text="@string/loremIpsum"
            android:textColor="@color/blueGrey"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/priorityLevel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>