<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".screens.fragments.DashboardFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold_source_sans_pro"
                android:text="@string/tugas"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/count_task_background"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/_0"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/taskTitle"
                app:layout_constraintStart_toEndOf="@+id/taskTitle"
                app:layout_constraintTop_toTopOf="@+id/taskTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                tools:listitem="@layout/task_list_item" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/notFound"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_not_found" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/taskFinishedTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle" />

            <TextView
                android:id="@+id/taskFinishedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold_source_sans_pro"
                android:text="@string/tugas_selesai"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notFound" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTaskFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskFinishedTitle"
                tools:listitem="@layout/task_list_item" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/notFoundFinished"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskFinishedTitle"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_not_found" />

            <ProgressBar
                android:id="@+id/progressBarFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/magazineTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskFinishedTitle" />

            <TextView
                android:id="@+id/magazineTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/bold_source_sans_pro"
                android:text="@string/kegiatan_amp_informasi"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notFoundFinished" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/magazineTitle"
                tools:listitem="@layout/event_list_item" />

            <ProgressBar
                android:id="@+id/progressBarEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:progressTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/magazineTitle" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/notFoundEvent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/magazineTitle"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottie_not_found" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blueDark"
        android:text="@string/chat"
        android:textColor="@color/white"
        app:icon="@drawable/ic_chat_white"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/scrollContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/blueDark" />

</androidx.constraintlayout.widget.ConstraintLayout>